# trainCtrl

./: Makefile.am  README  buildDate.h  builddeb.sh.in  buildrpm.sh.in  configure.ac  points.xml  track.xml  trackSimple.xml  trackrc.xml  trainCtrl.desktop  trainCtrl.spec.in  trainconfig.xml  traincontrol.desktop  traincontrol.spec.in  traincontrolrc.xml
debian/: changelog  changelog.in  control  control.in  copyright
src/: pca9685.c  pca9685.h  pointControl.c  pointControl.h  pointDaemon.c  pointTest.c  servoCtrl.c  servoCtrl.h  socketC.c  socketC.h  train.xpm  trainCalc.c  trainConnect.c  trainControl.c  trainControl.h  trainCtrl.c  trainCtrl.h  trainDaemon.c  trainThrottle.c  trainTrack.c
src/.deps/: trainCtrl.Po
system/: pointdaemon.service  traindaemon.service
